# meta_cell_cad

./: LICENSE  README.md  pyproject.toml  requirements.txt
meta_cell_cad/: config.py  logging_utils.py
meta_cell_cad/core/: cell.py  grid.py  netlist.py
meta_cell_cad/examples/: cell_library.yaml  example_design.json
meta_cell_cad/hdl/: spice_exporter.py  verilog_exporter.py
meta_cell_cad/layout/: placer.py  router.py
meta_cell_cad/ml/: datasets.py  meta_learner.py  objectives.py
meta_cell_cad/sim/: simulator.py  timing.py
meta_cell_cad/ui/: cli.py
tests/: test_cells.py  test_exporters.py  test_layout.py  test_meta_learner.py
